# strongswan

./: configure.ac
src/libcharon/: Makefile.am
src/libcharon/plugins/eap_aka_3gpp/: eap_aka_3gpp_provider.c
src/libcharon/plugins/s2b_3gpp/: Makefile.am  s2b_3gpp_plugin.c  s2b_3gpp_plugin.h  s2b_3gpp_provider.c  s2b_3gpp_provider.h
testing/scripts/recipes/: 013_strongswan.mk
